--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,4 +25,4 @@ jobs:
       - run: bun install --production
       - run: bun publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NPM_CONFIG_TOKEN: ${{secrets.npm_token}}
