--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install --production
-      - run: bun publish
+      - run: bun publish --access public
         env:
           NPM_CONFIG_TOKEN: ${{secrets.npm_token}}
