chore: update name package

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-	"name": "@init/file-uploader",
+	"name": "@grammers/file-uploader",
 	"type": "module",
 	"version": "0.0.1",
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"private": "false",
 	"exports": {
 		"types": "./dist/index.d.ts",
 		"import": "./dist/index.js",
